force-app/main/default/objects/DSALES_Tipodevehculo__c/DSALES_Tipodevehculo__c.object-meta.xml
<CustomObject>
    <label>Tipo de vehículo</label>
    <nameField>
        <label>Nombre de Tipo de vehículo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de vehículos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>