force-app/main/default/objects/DSALES_Tipodevehculo__c/fields/DSALES_Descripcin__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Descripcin__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>