force-app/main/default/objects/DSALES_Tipodevehculo__c/fields/DSALES_Numerodevehculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numerodevehculo__c</fullName>
    <description>campo numérico para los tipos de vehículo</description>
    <displayFormat>{000000}</displayFormat>
    <label>Número de vehículo</label>
    <type>AutoNumber</type>
</CustomField>